docs/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gobase
  labels:
    app.kubernetes.io/name: gobase
